--- a/templates/cart_page.html
+++ b/templates/cart_page.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <section class="container mt-5">
+    <section class="container product-page-container mt-5">
         <h2 class="text-center mb-4">Your Cart</h2>
 
         <div class="row">
@@ -21,7 +21,7 @@
                         <img src="{% static 'images/shoe1.jpg' %}" alt="Shoe" class="cart-img">
                         <div class="cart-details">
                             <h5>Classic Sneakers</h5>
-                            <p class="price">$49.99</p>
+                            <p class="price" data-price="49.99">$49.99</p>
                         </div>
                         <div class="quantity-control">
                             <button class="decrease-btn">−</button>
@@ -37,12 +37,15 @@
             </div>
 
             <!-- Cart Summary Section -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-5 mb-5 mt-lg-0">
                 <div class="cart-summary p-4 border">
                     <h4>Order Summary</h4>
                     <p>Subtotal: <span id="subtotal">$49.99</span></p>
-                    <p>Total: <span id="total">$49.99</span></p>
-                    <button class="btn btn-primary w-100 mt-3">Proceed to Checkout</button>
+                    <p>Total: <span id="total-price">$49.99</span></p>
+                    <a href="{% url 'checkout' %}" class="btn btn-primary">
+                        Proceed To Checkout
+                    </a>
+
                 </div>
             </div>
         </div>
