wanna try and host it

--- a/templates/master.html
+++ b/templates/master.html
@@ -32,7 +32,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'product_page' %}">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'cart-page' %}">Cart 🛒</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'view_cart' %}">Cart 🛒</a></li>
             </ul>
         </div>
     </div>
@@ -52,7 +52,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'product_page' %}">Products</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'cart-page' %}">Cart 🛒</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'view_cart' %}">Cart 🛒</a></li>
         </ul>
     </div>
 </div>
