--- a/templates/home.html
+++ b/templates/home.html
@@ -26,143 +26,86 @@
         <h2 class="text-center mb-4">Featured Shoes</h2>
 
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-3">
-            <div class="col">
-                <div class="product-card">
-                    <img src="{% static 'images/shoe1.jpg' %}" alt="Shoe 1" class="product-img">
-                    <div class="product-info">
-                        <h5 class="product-title">Classic Leather Sneakers</h5>
-                        <p class="product-price">$59.99</p>
-                        <div class="product-buttons">
-                            <a href="{% url 'product-details' %}" class="btn btn-primary">
-                                <i class="fas fa-eye"></i> View Details
-                            </a>
-                            <button class="btn btn-warning">
-                                <i class="fas fa-shopping-cart"></i> Add to Cart
-                            </button>
+            {% for product in products %}
+                <div class="col">
+                    <div class="product-card">
+                        <img src="{{ product.display_image.url }}" alt="{{ product.title }}" class="product-img">
+                        <div class="product-info">
+                            <h5 class="product-title">{{ product.title }}</h5>
+                            <p class="product-price">Ksh {{ product.price }}</p>
+                            <div class="product-buttons">
+                                <a href="{% url 'product-details' product.id %}" class="btn btn-primary">
+                                    <i class="fas fa-eye"></i> View Details
+                                </a>
+                                <button class="btn btn-warning">
+                                    <i class="fas fa-shopping-cart"></i> Add to Cart
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {% empty %}
+                <p class="text-center">No Products To Display</p>
+            {% endfor %}
 
-            <div class="col">
-                <div class="product-card">
-                    <img src="{% static 'images/shoe2.jpg' %}" alt="Shoe 2" class="product-img">
-                    <div class="product-info">
-                        <h5 class="product-title">Sporty Running Shoes</h5>
-                        <p class="product-price">$79.99</p>
-                        <div class="product-buttons">
-                            <a href="#" class="btn btn-primary">
-                                <i class="fas fa-eye"></i> View Details
-                            </a>
-                            <button class="btn btn-warning">
-                                <i class="fas fa-shopping-cart"></i> Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="product-card">
-                    <img src="{% static 'images/shoe3.jpg' %}" alt="Shoe 3" class="product-img">
-                    <div class="product-info">
-                        <h5 class="product-title">Elegant Formal Shoes</h5>
-                        <p class="product-price">$99.99</p>
-                        <div class="product-buttons">
-                            <a href="#" class="btn btn-primary">
-                                <i class="fas fa-eye"></i> View Details
-                            </a>
-                            <button class="btn btn-warning">
-                                <i class="fas fa-shopping-cart"></i> Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="product-card">
-                    <img src="{% static 'images/shoe4.jpg' %}" alt="Shoe 3" class="product-img">
-                    <div class="product-info">
-                        <h5 class="product-title">Elegant Formal Shoes</h5>
-                        <p class="product-price">$99.99</p>
-                        <div class="product-buttons">
-                            <a href="#" class="btn btn-primary">
-                                <i class="fas fa-eye"></i> View Details
-                            </a>
-                            <button class="btn btn-warning">
-                                <i class="fas fa-shopping-cart"></i> Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
     <section class="container mt-5">
         <h2 class="text-center mb-4">Shop by Category</h2>
         <div class="row">
-            <div class="col-6 col-md-3">
-                <div class="category-card">
-                    <img src="{% static 'images/sneakers.jpg' %}" alt="Sneakers">
-                    <h5>Sneakers</h5>
+            {% for category in categories %}
+                <div class="col-6 col-md-3 mb-4">
+                    <a href="{% url 'category-view' category.slug %}">
+                        <div class="category-card">
+                            <img src="{{ category.image.url }}" alt="{{ category.name }}">
+                            <h5 class="product-title">{{ category.name }}</h5>
+                        </div>
+                    </a>
                 </div>
-            </div>
-            <div class="col-6 col-md-3">
-                <div class="category-card">
-                    <img src="{% static 'images/loafers.jpg' %}" alt="Loafers">
-                    <h5>Loafers</h5>
-                </div>
-            </div>
-            <div class="col-6 col-md-3">
-                <div class="category-card">
-                    <img src="{% static 'images/sports.jpg' %}" alt="Sports Shoes">
-                    <h5>Sports Shoes</h5>
-                </div>
-            </div>
-            <div class="col-6 col-md-3">
-                <div class="category-card">
-                    <img src="{% static 'images/formal.jpg' %}" alt="Formal Shoes">
-                    <h5>Formal Shoes</h5>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </section>
+
 
     <section class="container mt-5">
         <h2 class="text-center mb-4">New Arrivals</h2>
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="product-card">
-                    <img src="{% static 'images/new1.jpg' %}" alt="Trendy Sneakers">
-                    <h5>Trendy Sneakers</h5>
-                    <p class="price">$79.99</p>
-                    <div class="product-buttons">
-                        <a href="{% url 'product-details' %}" class="btn btn-primary">
-                            <i class="fas fa-eye"></i> View Details
-                        </a>
-                        <button class="btn btn-warning">
-                            <i class="fas fa-shopping-cart"></i> Add to Cart
-                        </button>
+            {% for product in products|slice:":2" %}
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="product-card">
+                        <img src="{{ product.image.url }}" alt="{{ product.title }}">
+                        <h5>{{ product.title }}</h5>
+                        <p class="price">Ksh {{ product.price }}</p>
+                        <div class="product-buttons">
+                            <a href="{% url 'product-details' product.id %}" class="btn btn-primary">
+                                <i class="fas fa-eye"></i> View Details
+                            </a>
+                            <button class="btn btn-warning">
+                                <i class="fas fa-shopping-cart"></i> Add to Cart
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="product-card">
-                    <img src="{% static 'images/new2.jpg' %}" alt="Luxury Loafers">
-                    <h5>Luxury Loafers</h5>
-                    <p class="price">$99.99</p>
-                    <div class="product-buttons">
-                        <a href="{% url 'product-details' %}" class="btn btn-primary">
-                            <i class="fas fa-eye"></i> View Details
-                        </a>
-                        <button class="btn btn-warning">
-                            <i class="fas fa-shopping-cart"></i> Add to Cart
-                        </button>
-                    </div>
-                </div>
-            </div>
+            {% empty %}
+                <p class="text-center">No New Products To Display</p>
+            {% endfor %}
+
+            {#            <div class="col-lg-6 col-md-6 col-sm-12">#}
+            {#                <div class="product-card">#}
+            {#                    <img src="{% static 'images/new2.jpg' %}" alt="Luxury Loafers">#}
+            {#                    <h5>Luxury Loafers</h5>#}
+            {#                    <p class="price">$99.99</p>#}
+            {#                    <div class="product-buttons">#}
+            {#                        <a href="{% url 'product-details' %}" class="btn btn-primary">#}
+            {#                            <i class="fas fa-eye"></i> View Details#}
+            {#                        </a>#}
+            {#                        <button class="btn btn-warning">#}
+            {#                            <i class="fas fa-shopping-cart"></i> Add to Cart#}
+            {#                        </button>#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#            </div>#}
         </div>
     </section>
 
